# AimRT

./: .cmake-format.py  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.bat  build.sh  format.sh  package.sh  pyproject.toml  pytest.ini  test.bat  test.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/net/: CMakeLists.txt  asio_http_cli.h  asio_http_svr.h  asio_http_test.cc  asio_tcp_cli.h  asio_tcp_svr.h  asio_tcp_test.cc  asio_tools.h  asio_udp_cli.h  asio_udp_svr.h  asio_udp_test.cc  asio_ws_cli.h  asio_ws_svr.h  asio_ws_test.cc  http_dispatcher.h  http_dispatcher_test.cc  net_util.h  url_encode.h  url_encode_test.cc
src/common/ros2_util/: CMakeLists.txt  json_convert.h  json_convert_test.cc  json_cpp_utils.h  rostype_mapping.h  type_support_util.h
src/common/util/: CMakeLists.txt  block_queue.h  block_queue_test.cc  buffer_util.h  buffer_util_test.cc  dynamic_lib.h  exception.h  format.h  light_signal.h  light_signal_test.cc  log_util.h  stl_tool.h  stl_tool_test.cc  string_util.h  string_util_test.cc  time_util.h  time_util_test.cc  url_encode.h  url_encode_test.cc  url_parser.h  url_parser_test.cc
src/examples/: CMakeLists.txt
src/examples/cpp/: CMakeLists.txt
src/examples/example_helloworld/: CMakeLists.txt
src/examples/example_helloworld_py/: CMakeLists.txt
src/examples/example_http_channel/: CMakeLists.txt
src/examples/example_http_rpc/: CMakeLists.txt
src/examples/example_mqtt_channel/: CMakeLists.txt
src/examples/example_normal_channel/: CMakeLists.txt
src/examples/example_normal_rpc/: CMakeLists.txt
src/examples/example_parameter/: CMakeLists.txt
src/examples/example_real_time/: CMakeLists.txt
src/examples/example_ros2_channel/: CMakeLists.txt
src/examples/example_ros2_rpc/: CMakeLists.txt
src/examples/example_sm_channel/: CMakeLists.txt
src/examples/example_time_manipulator/: CMakeLists.txt
src/examples/plugins/: CMakeLists.txt
src/examples/py/: CMakeLists.txt
src/interface/: CMakeLists.txt
src/interface/aimrt_core_plugin_interface/: CMakeLists.txt  aimrt_core_plugin_base.h  aimrt_core_plugin_export.h  aimrt_core_plugin_main.h
src/interface/aimrt_module_c_interface/: CMakeLists.txt  core_base.h  module_base.h
src/interface/aimrt_module_cpp_interface/: CMakeLists.txt  core.h  module_base.h
src/interface/aimrt_module_protobuf_interface/: CMakeLists.txt
src/interface/aimrt_module_ros2_interface/: CMakeLists.txt
src/interface/aimrt_pkg_c_interface/: CMakeLists.txt  pkg_export.h  pkg_macro.h  pkg_main.h
src/interface/aimrt_runtime_c_interface/: CMakeLists.txt  runtime_base.h  runtime_export.h  runtime_main.h
src/interface/aimrt_type_support_pkg_c_interface/: type_support_pkg_export.h  type_support_pkg_main.h
src/plugins/: CMakeLists.txt
src/plugins/grpc_plugin/: CMakeLists.txt  grpc_plugin.cc  grpc_rpc_backend.cc  grpc_rpc_backend.h
src/plugins/iceoryx_plugin/: iceoryx_channel_backend.cc  iceoryx_channel_backend.h  iceoryx_manager.cc  iceoryx_plugin.cc  util.cc  util.h
src/plugins/lcm_plugin/: CMakeLists.txt  global.cc  global.h  lcm_channel_backend.cc  lcm_channel_backend.h  lcm_dispatcher.cc  lcm_dispatcher.h  lcm_manager.h  lcm_plugin.cc  lcm_plugin.h  lcm_plugin_main.cc  lcm_plugin_test.cc
src/plugins/log_control_plugin/: CMakeLists.txt  global.cc  global.h  log_control_plugin.cc  log_control_plugin.h  log_control_plugin_main.cc  service.cc  service.h
src/plugins/mqtt_plugin/: CMakeLists.txt  global.cc  global.h  mqtt_channel_backend.cc  mqtt_channel_backend.h  mqtt_plugin.cc  mqtt_plugin.h  mqtt_plugin_main.cc  mqtt_rpc_backend.cc  mqtt_rpc_backend.h  msg_handle_registry.h
src/plugins/net_plugin/: CMakeLists.txt  global.cc  global.h  msg_handle_registry.h  net_plugin.cc  net_plugin.h  net_plugin_main.cc
src/plugins/opentelemetry_plugin/: CMakeLists.txt  context_carrier.h  global.cc  global.h  opentelemetry_plugin.cc  opentelemetry_plugin.h  opentelemetry_plugin_main.cc  rpc_context_carrier.h  util.h
src/plugins/parameter_plugin/: CMakeLists.txt  global.cc  global.h  parameter_plugin.cc  parameter_plugin.h  parameter_plugin_main.cc  rpc_service.cc  rpc_service.h  service.cc  service.h
src/plugins/record_playback_plugin/: CMakeLists.txt  global.cc  global.h  metadata_yaml.h  playback_action.cc  playback_action.h  playback_db_tool.cc  playback_db_tool.h  record_action.cc  record_action.h  record_db_tool.cc  record_db_tool.h  record_playback_plugin.cc  record_playback_plugin.h  record_playback_plugin_main.cc  service.cc  service.h  topic_meta_key.h  type_support_pkg_loader.cc  type_support_pkg_loader.h
src/plugins/ros2_plugin/: CMakeLists.txt  global.cc  global.h  ros2_adapter_rpc_client.cc  ros2_adapter_rpc_client.h  ros2_adapter_rpc_server.cc  ros2_adapter_rpc_server.h  ros2_adapter_subscription.cc  ros2_adapter_subscription.h  ros2_channel_backend.cc  ros2_channel_backend.h  ros2_name_encode.h  ros2_name_encode_test.cc  ros2_plugin.cc  ros2_plugin.h  ros2_plugin_main.cc  ros2_rpc_backend.cc  ros2_rpc_backend.h
src/plugins/sm_plugin/: CMakeLists.txt  global.cc  global.h  sm_channel_backend.cc  sm_channel_backend.h  sm_plugin.cc  sm_plugin.h  sm_plugin_main.cc  sm_rpc_backend.cc  sm_rpc_backend.h
src/plugins/time_manipulator_plugin/: CMakeLists.txt  global.cc  global.h  rpc_service.cc  rpc_service.h  service.cc  service.h  time_manipulator_executor.cc  time_manipulator_executor.h  time_manipulator_plugin.cc  time_manipulator_plugin.h  time_manipulator_plugin_main.cc
src/plugins/zenoh_plugin/: CMakeLists.txt  global.cc  global.h  msg_handle_registry.h  util.cc  util.h  zenoh_channel_backend.cc  zenoh_channel_backend.h  zenoh_manager.cc  zenoh_manager.h  zenoh_plugin.cc  zenoh_plugin.h  zenoh_plugin_main.cc  zenoh_rpc_backend.cc  zenoh_rpc_backend.h
src/protocols/: CMakeLists.txt
src/protocols/common/: CMakeLists.txt  error.proto  header.proto  module.proto
src/protocols/example/: CMakeLists.txt  benchmark.proto  common.proto  event.proto  rpc.proto
src/protocols/example_ros2/: CMakeLists.txt  (+1 more)
src/runtime/: CMakeLists.txt
src/tools/: CMakeLists.txt
(+914 files in other folders)
